# justins-magic-music-box

./: .gitignore  Justfile  LICENSE  README.md
app/: pyproject.toml
app/src/jmb/: config.py  db.py  main.py
app/src/jmb/api/: events.py  jobs.py  upload.py
app/src/jmb/services/: events_bus.py  storage.py
app/src/jmb/worker/: pipeline.py  queue.py
app/src/jmb/worker/stages/: detect.py  notation.py  probe.py  separate.py  simplify.py  tabs.py  transcribe.py
app/static/: index.html
app/tests/: test_health.py  test_notation.py  test_simplify.py
app/tests/fixtures/: bass_music21.musicxml
docs/: index.html
docs/share/: index.html  tunnel.json
scripts/: dev.sh  share.sh
workers/basicpitch/: pyproject.toml  run.py
workers/demucs/: pyproject.toml  run.py
