[project]
name = "jmb"
version = "0.1.0"
description = "Justin's Magic Music Box — FastAPI backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "ulid-py>=1.1",
    "music21>=9.9.1",
    "pyguitarpro>=0.10.2",
    "librosa>=0.11.0",
    "pretty-midi>=0.2.11",
    "soundfile>=0.13.1",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
