[project]
name = "jmb-worker-basicpitch"
version = "0.1.0"
description = "Isolated venv for Spotify Basic Pitch transcription"
requires-python = ">=3.11,<3.12"
dependencies = [
    "basic-pitch>=0.4.0",
    "onnxruntime>=1.18",
    "soundfile>=0.12",
    "pretty-midi>=0.2.10",
    "numpy<2.0",
    "setuptools>=75,<80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
