[project]
name = "jmb-worker-demucs"
version = "0.1.0"
description = "Isolated venv for Demucs source separation"
requires-python = ">=3.11,<3.12"
dependencies = [
    "demucs>=4.0.1",
    "torch>=2.4",
    "torchaudio>=2.4",
    "torchcodec>=0.4",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
